--- a/Gabriel_Profile Card.html
+++ b/Gabriel_Profile Card.html
@@ -9,11 +9,12 @@
         <div>
 
         
-        <img src="marklaw.png" width="200" height="200">
+        <img src="1by2.png" width="200" height="200">
         
         <h1>Mark lawrence Gabriel</h1>
         <h4>Grade 12 - Pintaflores</h4>
         <p>I'm Critical thinker in solving problems, capable of adopting and adjusting in environment, organization, and team leader that motivates and inspires others, open-minded to different feedback for improvements and new ideas.</p>
         </div>
     </body>
+
 </html>
